--- a/app/src/scss/_other_pages_nav.scss
+++ b/app/src/scss/_other_pages_nav.scss
@@ -14,6 +14,7 @@ nav.side-nav {
   }
 
   h2 {
+    margin-block-start: 0;
     margin-block-end: 0.65em;
   }
 
@@ -31,5 +32,14 @@ nav.side-nav {
   li {
     min-width: 120px;
     margin-block: 0;
+  }
+
+  // hide the sidebar navigation on smaller viewports since it takes up too much vertical space when stacking
+  @include responsive(small-screens) {
+    display: none;
+  }
+
+  @include responsive_mobile_landscape() {
+    display: none;
   }
 }
